Fix accordion gap when starts with list, fix pattern intrusion on mobile department

--- a/web/themes/custom/citizen_dart/components/03-composites/paragraphs/accordions/_accordions.scss
+++ b/web/themes/custom/citizen_dart/components/03-composites/paragraphs/accordions/_accordions.scss
@@ -123,6 +123,10 @@
     @include desk{
       padding: 0 20px 60px;
     }
+    & > ul:first-child,& > ol:first-child{
+      margin-top: 0;
+      padding-top: 2rem;
+    }
 	}
 
 	//active accordion
