--- a/web/themes/custom/citizen_dart/components/04-units/nodes/_node-mixins.scss
+++ b/web/themes/custom/citizen_dart/components/04-units/nodes/_node-mixins.scss
@@ -11,11 +11,33 @@
       right: -200vw;
     }
     to {
-      right: -28px;
+      right: -240px;
     }
   }
   animation: heroSwirlSlide 1.5s forwards;
   @include smallTab{
+    @keyframes heroSwirlSlide {
+      from {
+        right: -200vw;
+      }
+      to {
+        right: -220px;
+      }
+    }
+    animation: heroSwirlSlide 1.5s forwards;
+  }
+  @include menuStop{
+    @keyframes heroSwirlSlide {
+      from {
+        right: -200vw;
+      }
+      to {
+        right: -80px;
+      }
+    }
+    animation: heroSwirlSlide 1.5s forwards;
+  }
+  @include contentStop{
     @keyframes heroSwirlSlide {
       from {
         right: -200vw;
@@ -522,7 +544,6 @@
   content: '';
   position: absolute;
   bottom: -8px;
-  animation: heroSwirlSlideMobileRight 1.5s forwards;
   z-index: 0;
   width: 308px;
   height: 572px;
